--- a/src/Resources/styles.css
+++ b/src/Resources/styles.css
@@ -26,7 +26,7 @@
     -fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.6), 1, 0, 0, 0.5);
 }
 
-.add, .delete, .lookup {
+.add, .delete, .lookup, .change-theme {
     -fx-padding: 1px 10px;
     -fx-pref-height: 5px;
     -fx-pref-width: 70px;
@@ -37,9 +37,12 @@
     -fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.6), 1, 0, 0, 0.5);
 }
 
-.add:pressed, .delete:pressed, .lookup:pressed, .change-status:pressed, .change-picture:pressed, .add-friend:pressed {
-    -fx-border-color: #039ED3;
+.change-theme {
+    -fx-pref-width: 130px;
+}
 
+.add:pressed, .delete:pressed, .lookup:pressed, .change-theme:pressed, .change-status:pressed, .change-picture:pressed, .add-friend:pressed {
+    -fx-border-color: #039ED3;
 }
 
 .space {
@@ -73,7 +76,6 @@
 .profile-picture {
     -fx-pref-height: 120px;
     -fx-pref-width: 120px;
-
 }
 
 .program-massage {
@@ -81,6 +83,23 @@
 }
 
 .square {
+    -fx-fill: white;
     -fx-stroke: black;
     -fx-stroke-width: 1px;
+}
+
+.program-name {
+    -fx-font-size: 14px;
+    -fx-alignment: center-left;
+    -fx-min-width: 50px;
+    -fx-max-height: 10000px;
+    -fx-max-width: 10000px;
+}
+
+.close-button, .maximize-button, .minimize-button {
+    -fx-background-color: transparent;
+}
+
+.title-bar {
+    -fx-background-color: #EEF4F9;
 }
